trunk/Archive2/98/90d31e116a1819/output
main.cpp: In function 'int main()':
main.cpp:25:24: error: invalid conversion from 'std::map<int, int>::mapped_type {aka int}' to 'int*' [-fpermissive]
     int *key1 = myMap[3];
                        ^
main.cpp:22:9: warning: unused variable 'key' [-Wunused-variable]
     int key = myMap[1];
         ^
